--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,27 @@
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #f4f4f4;
     margin: 0;
     padding: 0;
+    background-color: lightblue;
+}
+
+nav {
+    background-color: rgb(93, 88, 88);
+    overflow: hidden;
+}
+
+nav a {
+    float: left;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+nav a:hover {
+    background-color: #ddd;
+    color: black;
 }
 
 #main {
@@ -13,7 +32,9 @@ body {
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
-}
+    background-image: url(https://cdn.dribbble.com/users/1309677/screenshots/15466031/media/e0bc2b26253db16df12085e705255416.png?resize=400x300&vertical=center) 
+};
+
 
 h1 {
     color: #333;
