--- a/styles.css
+++ b/styles.css
@@ -69,3 +69,9 @@ button:hover {
     color: #333;
     margin: 5px 0;
 }
+
+#flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
